--- a/portfolio.html
+++ b/portfolio.html
@@ -21,17 +21,18 @@
             <header class="header">
                 <div class="container header-container">
                     <nav class="navigation">
-                        <a lang="en" class="link header-logo href=">Web<span class="header-logo-two">Studio</span></a>
-                        <ul class="list header-list">
-                            <li class="header-item "><a class="link active header-link" href="./index.html">Студия</a></li>
-                            <li class="header-item "><a class="link header-link header-link-index" href="./portfolio.html">Портфолио</a></li>
-                            <li class="header-item "><a class="link header-link" href="">Контакты</a></li>
+                        <a lang="en" class="link logo logo__text href=">Web<span class="logo__text--span">Studio</span></a>
+                        <ul class="list site-nav">
+                            <li class="site-nav__item"><a class="link site-nav__link"
+                                    href="./index.html">Студия</a></li>
+                            <li class="site-nav__item"><a class="link site-nav__link site-nav__link--index" href="./portfolio.html">Портфолио</a></li>
+                            <li class="site-nav__item"><a class="link site-nav__link" href="">Контакты</a></li>
                         </ul>
                     </nav>
-                    <ul class="list header-connect">
+                    <ul class="list connect connect_list">
                         <li class="connect-item">
-                            <a class="link header-contact" href="mailto:info@devstudio.com">
-                                <svg class="header-social-icon" width="16" height="12">
+                            <a class="link connect__contact" href="mailto:info@devstudio.com">
+                                <svg class="connect__icon" width="16" height="12">
                                     <use href="./images/icons.svg#icon-envelope">
                                     </use>
                                 </svg>
@@ -39,8 +40,8 @@
                             </a>
                         </li>
                         <li class="connect-item">
-                            <a class="link header-contact" href="tel:+380961111111">
-                                <svg class="header-social-icon" width="16" height="12">
+                            <a class="link connect__contact" href="tel:+380961111111">
+                                <svg class="connect__icon" width="16" height="12">
                                     <use href="./images/icons.svg#icon-smartphone">
                                     </use>
                                 </svg>
