--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
         <header class="header">
             <div class="container header-container">
                 <nav class="navigation">
-                    <a lang="en" class="link header-logo href=">Web<span class="header-logo-two">Studio</span></a>
-                    <ul class="list header-list">
-                        <li class="header-item "><a class="link header-link header-link-index" href="./index.html">Студия</a></li>
-                        <li class="header-item "><a class="link header-link" href="./portfolio.html">Портфолио</a></li>
-                        <li class="header-item "><a class="link header-link" href="">Контакты</a></li>
+                    <a lang="en" class="link logo logo__text href=">Web<span class="logo__text--span">Studio</span></a>
+                    <ul class="list site-nav">
+                        <li class="site-nav__item"><a class="link site-nav__link site-nav__link--index" href="./index.html">Студия</a></li>
+                        <li class="site-nav__item"><a class="link site-nav__link" href="./portfolio.html">Портфолио</a></li>
+                        <li class="site-nav__item"><a class="link site-nav__link" href="">Контакты</a></li>
                     </ul>
                 </nav>
-                <ul class="list header-connect">
+                <ul class="list connect connect_list">
                     <li class="connect-item">
-                        <a class="link header-contact" href="mailto:info@devstudio.com">
-                            <svg class="header-social-icon" width="16" height="12">
+                        <a class="link connect__contact" href="mailto:info@devstudio.com">
+                            <svg class="connect__icon" width="16" height="12">
                                 <use href="./images/icons.svg#icon-envelope">
                                 </use>
                             </svg>
@@ -38,8 +38,8 @@
                         </a>
                     </li>
                     <li class="connect-item">
-                        <a class="link header-contact" href="tel:+380961111111">
-                            <svg class="header-social-icon" width="16" height="12">
+                        <a class="link connect__contact" href="tel:+380961111111">
+                            <svg class="connect__icon" width="16" height="12">
                                 <use href="./images/icons.svg#icon-smartphone">
                                 </use>
                             </svg>
@@ -307,51 +307,51 @@
             <!--Постоянные клиенты-->
             <section class="section-clients">
                 <div class="container">
-                    <h2 class="section-clients-title">Постоянные клиенты</h2>
+                    <h2 class="section-clients__title">Постоянные клиенты</h2>
                     <ul class="clients-list list">
-                        <li class="clients-item">
-                            <a href="" class="clients-block">
-                                <svg class="clients-icon" width="106" height="60">
+                        <li class="clients-list__item">
+                            <a href="" class="clients-list__block">
+                                <svg class="clients-list__icon width="106" height="60">
                                     <use href="./images/icons.svg#icon-group">
                                     </use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="clients-item">
-                            <a href="" class="clients-block">
-                                <svg class="clients-icon" width="106" height="60">
+                        <li class="clients-list__item">
+                            <a href="" class="clients-list__block">
+                                <svg class="clients-list__icon" width="106" height="60">
                                     <use href="./images/icons.svg#icon-group2">
                                     </use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="clients-item">
-                            <a href="" class="clients-block">
-                                <svg class="clients-icon" width="106" height="60">
+                        <li class="clients-list__item">
+                            <a href="" class="clients-list__block">
+                                <svg class="clients-list__icon" width="106" height="60">
                                     <use href="./images/icons.svg#icon-group3">
                                     </use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="clients-item">
-                            <a href="" class="clients-block">
-                                <svg class="clients-icon" width="106" height="60">
+                        <li class="clients-list__item">
+                            <a href="" class="clients-list__block">
+                                <svg class="clients-list__icon" width="106" height="60">
                                     <use href="./images/icons.svg#icon-group4">
                                     </use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="clients-item">
-                            <a href="" class="clients-block">
-                                <svg class="clients-icon" width="106" height="60">
+                        <li class="clients-list__item">
+                            <a href="" class="clients-list__block">
+                                <svg class="clients-list__icon" width="106" height="60">
                                     <use href="./images/icons.svg#icon-group5">
                                     </use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="clients-item">
-                            <a href="" class="clients-block">
-                                <svg class="clients-icon" width="106" height="60">
+                        <li class="clients-list__item">
+                            <a href="" class="clients-list__block">
+                                <svg class="clients-list__icon  " width="106" height="60">
                                     <use href="./images/icons.svg#icon-group6">
                                     </use>
                                 </svg>
@@ -375,36 +375,36 @@
                         </ul>
                     </address>
                 </section>
-                <section class="list footer-item">
-                    <p class="footer-text">присоединяйтесь</p>
-                    <ul class="footer-social">
-                        <li class="footer-social-item">
-                            <a href="" class="footer-social-link">
-                                <svg class="footer-social-icon" width="20" height="20">
+                <section class="link footer-item">
+                    <p class="footer__text">присоединяйтесь</p>
+                    <ul class="footer-social list">
+                        <li class="footer-social__item">
+                            <a href="" class="footer-social__link">
+                                <svg class="footer-social__icon" width="20" height="20">
                                     <use href="./images/icons.svg#icon-instagram2">
                                     </use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="footer-social-item">
-                            <a href="" class="footer-social-link">
-                                <svg class="footer-social-icon" width="20" height="20">
+                        <li class="footer-social__item">
+                            <a href="" class="footer-social__link">
+                                <svg class="footer-social__icon" width="20" height="20">
                                     <use href="./images/icons.svg#icon-twitter1">
                                     </use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="footer-social-item">
-                            <a href="" class="footer-social-link">
-                                <svg class="footer-social-icon" width="20" height="20">
+                        <li class="footer-social__item">
+                            <a href="" class="footer-social__link">
+                                <svg class="footer-social__icon" width="20" height="20">
                                     <use href="./images/icons.svg#icon-facebook1">
                                     </use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="footer-social-item">
-                            <a href="" class="footer-social-link">
-                                <svg class="footer-social-icon" width="20" height="20">
+                        <li class="footer-social__item">
+                            <a href="" class="footer-social__link">
+                                <svg class="footer-social__icon" width="20" height="20">
                                     <use href="./images/icons.svg#icon-linkedin">
                                     </use>
                                 </svg>
@@ -412,16 +412,16 @@
                         </li>
                     </ul>
                 </section>
-                <section class="online">
-                    <p class="footer-text">подпишитесь на рассылку</p>
-                    <form class="online-form" action="#">
+                <section class="online online__subscription">
+                    <p class="online__text">подпишитесь на рассылку</p>
+                    <form class="online__form" action="#">
                         <input 
                                 type="email"
-                                class="online-input"
+                                class="online__input"
                                 name="E-mail"
                                 placeholder="E-mail">    
-                        <button type="submit" class="btn-online">Подписаться
-                            <svg class="footer-online-icon" width="24" height="24">
+                        <button type="submit" class="btn__online">Подписаться
+                            <svg class="online__icon" width="24" height="24">
                                 <use href="./images/icons.svg#icon-icon-send">
                                 </use>
                             </svg>
