--- a/index.html
+++ b/index.html
@@ -362,16 +362,16 @@
             </section>
         </main>
         <!--подвал-->
-        <footer class="footer footer-list">
+        <footer class="footer">
             <div class="container footer-list">
                 <section class="list footer-item">
-                    <a lang="en" class="link footer-logo href=">Web<span class="footer-logo-two">Studio</span></a>
+                    <a lang="en" class="link footer-logo footer-logo__text href=">Web<span class="footer-logo__text--span">Studio</span></a>
                     <address class="adress-footer"> 
-                        <ul class="list">
-                            <li><a class="link footer-address" href=" https://>goo.gl/maps/v6AwisfBSt3JqX6G6" target="_blank" rel="noopener noreferrer"
+                        <ul class="list footer-contacts">
+                            <li><a class="link footer-contacts__address" href=" https://>goo.gl/maps/v6AwisfBSt3JqX6G6" target="_blank" rel="noopener noreferrer"
                                     >г. Киев, пр-т Леси Украинки, 26</a></li>
-                            <li><a class="link footer-contact" href="mailto:info@example.com">info@example.com</a></li>
-                            <li><a class="link footer-contact" href="tel:+380991111111">+38 099 111 11 11</a></li>
+                            <li><a class="link footer-contacts__contact" href="mailto:info@example.com">info@example.com</a></li>
+                            <li><a class="link footer-contacts__contact" href="tel:+380991111111">+38 099 111 11 11</a></li>
                         </ul>
                     </address>
                 </section>
