--- a/portfolio.html
+++ b/portfolio.html
@@ -52,8 +52,8 @@
                 </div>
             </header>
             <!--основной контент очень-->
-            <main>
-                <section class="buttons">
+            <main>-
+                <section class="buttons ">
                     <div class="container">
                         <h1 class="visually-hidden">Набор радиокномок</h1>
                         <ul class="list list-buttons">
@@ -172,49 +172,51 @@
                     </div>
                 </section>
             </main>
-            <footer class="footer footer-list">
+            <footer class="footer">
                 <div class="container footer-list">
                     <section class="list footer-item">
-                        <a lang="en" class="link footer-logo href=">Web<span class="footer-logo-two">Studio</span></a>
+                        <a lang="en" class="link footer-logo footer-logo__text href=">Web<span
+                                class="footer-logo__text--span">Studio</span></a>
                         <address class="adress-footer">
-                            <ul class="list">
-                                <li><a class="link footer-address" href=" https://>goo.gl/maps/v6AwisfBSt3JqX6G6" target="_blank"
-                                        rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
-                                <li><a class="link footer-contact" href="mailto:info@example.com">info@example.com</a></li>
-                                <li><a class="link footer-contact" href="tel:+380991111111">+38 099 111 11 11</a></li>
+                            <ul class="list footer-contacts">
+                                <li><a class="link footer-contacts__address" href=" https://>goo.gl/maps/v6AwisfBSt3JqX6G6"
+                                        target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
+                                <li><a class="link footer-contacts__contact" href="mailto:info@example.com">info@example.com</a>
+                                </li>
+                                <li><a class="link footer-contacts__contact" href="tel:+380991111111">+38 099 111 11 11</a></li>
                             </ul>
                         </address>
                     </section>
-                    <section class="list footer-item">
-                        <p class="footer-text">присоединяйтесь</p>
-                        <ul class="footer-social">
-                            <li class="footer-social-item">
-                                <a href="" class="footer-social-link">
-                                    <svg class="footer-social-icon" width="20" height="20">
+                    <section class="link footer-item">
+                        <p class="footer__text">присоединяйтесь</p>
+                        <ul class="footer-social list">
+                            <li class="footer-social__item">
+                                <a href="" class="footer-social__link">
+                                    <svg class="footer-social__icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-instagram2">
                                         </use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="footer-social-item">
-                                <a href="" class="footer-social-link">
-                                    <svg class="footer-social-icon" width="20" height="20">
+                            <li class="footer-social__item">
+                                <a href="" class="footer-social__link">
+                                    <svg class="footer-social__icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-twitter1">
                                         </use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="footer-social-item">
-                                <a href="" class="footer-social-link">
-                                    <svg class="footer-social-icon" width="20" height="20">
+                            <li class="footer-social__item">
+                                <a href="" class="footer-social__link">
+                                    <svg class="footer-social__icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-facebook1">
                                         </use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="footer-social-item">
-                                <a href="" class="footer-social-link">
-                                    <svg class="footer-social-icon" width="20" height="20">
+                            <li class="footer-social__item">
+                                <a href="" class="footer-social__link">
+                                    <svg class="footer-social__icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-linkedin">
                                         </use>
                                     </svg>
@@ -222,12 +224,12 @@
                             </li>
                         </ul>
                     </section>
-                    <section class="online">
-                        <p class="footer-text">подпишитесь на рассылку</p>
-                        <form class="online-form" action="#">
-                            <input type="email" class="online-input" name="E-mail" placeholder="E-mail">
-                            <button type="submit" class="btn-online">Подписаться
-                                <svg class="footer-online-icon" width="24" height="24">
+                    <section class="online online__subscription">
+                        <p class="online__text">подпишитесь на рассылку</p>
+                        <form class="online__form" action="#">
+                            <input type="email" class="online__input" name="E-mail" placeholder="E-mail">
+                            <button type="submit" class="btn__online">Подписаться
+                                <svg class="online__icon" width="24" height="24">
                                     <use href="./images/icons.svg#icon-icon-send">
                                     </use>
                                 </svg>
