--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <header class="header">
             <div class="container header-container">
                 <nav class="navigation">
-                    <a lang="en" class="link logo logo__text href=">Web<span class="logo__text--span">Studio</span></a>
+                    <a lang="en" class="link logo logo__text href=">Web<span class="logo__span">Studio</span></a>
                     <ul class="list site-nav">
                         <li class="site-nav__item"><a class="link site-nav__link site-nav__link--index" href="./index.html">Студия</a></li>
                         <li class="site-nav__item"><a class="link site-nav__link" href="./portfolio.html">Портфолио</a></li>
@@ -29,8 +29,8 @@
                 </nav>
                 <ul class="list connect connect_list">
                     <li class="connect-item">
-                        <a class="link connect__contact" href="mailto:info@devstudio.com">
-                            <svg class="connect__icon" width="16" height="12">
+                        <a class="link connect-item__link" href="mailto:info@devstudio.com">
+                            <svg class="connect-item__icon" width="16" height="12">
                                 <use href="./images/icons.svg#icon-envelope">
                                 </use>
                             </svg>
@@ -38,8 +38,8 @@
                         </a>
                     </li>
                     <li class="connect-item">
-                        <a class="link connect__contact" href="tel:+380961111111">
-                            <svg class="connect__icon" width="16" height="12">
+                        <a class="link connect-item__link" href="tel:+380961111111">
+                            <svg class="connect-item__icon" width="16" height="12">
                                 <use href="./images/icons.svg#icon-smartphone">
                                 </use>
                             </svg>
